kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-app-backend
  template:
    metadata:
      labels:
        app: shop-app-backend
    spec:
      containers:
      - name: shop-app-backend
        image: k9798909/shop-app-backend
        ports:
        - containerPort: 8088
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop-app
  template:
    metadata:
      labels:
        app: shop-app
    spec:
      containers:
      - name: shop-app
        image: k9798909/shop-app
        ports:
        - containerPort: 8080
